[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/GUI/Options.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Option.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/GUI/uncheck.png" type="Texture" id=3]
[ext_resource path="res://Sprites/GUI/check.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.639216, 0.0627451, 0.741176, 0.796078 )
border_width_left = 30
border_width_top = 30
border_width_right = 30
border_width_bottom = 30
border_color = Color( 0.14902, 0.0196078, 0.184314, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="Options" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="Options" type="PopupPanel" parent="."]
visible = true
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 640, 360 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="FullScreen" type="CheckBox" parent="Options/VBoxContainer"]
margin_left = 189.0
margin_top = 50.0
margin_right = 390.0
margin_bottom = 90.0
size_flags_horizontal = 4
custom_icons/checked = ExtResource( 4 )
custom_icons/unchecked = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Toggle Fullscreen"

[node name="Borderless" type="CheckBox" parent="Options/VBoxContainer"]
margin_left = 185.0
margin_top = 94.0
margin_right = 394.0
margin_bottom = 134.0
size_flags_horizontal = 4
custom_icons/checked = ExtResource( 4 )
custom_icons/unchecked = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Toggle Borderless"

[node name="VSync" type="CheckBox" parent="Options/VBoxContainer"]
margin_left = 208.0
margin_top = 138.0
margin_right = 372.0
margin_bottom = 178.0
size_flags_horizontal = 4
custom_icons/checked = ExtResource( 4 )
custom_icons/unchecked = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Toggle Vsync"

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBoxContainer"]
margin_top = 182.0
margin_right = 580.0
margin_bottom = 202.0

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer"]
margin_right = 144.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Music Volume"

[node name="Music" type="HSlider" parent="Options/VBoxContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 580.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
min_value = -60.0
max_value = 0.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Options/VBoxContainer"]
margin_top = 206.0
margin_right = 580.0
margin_bottom = 226.0

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer2"]
margin_right = 193.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Sound Effects Volume"

[node name="Sound" type="HSlider" parent="Options/VBoxContainer/HBoxContainer2"]
margin_left = 197.0
margin_right = 580.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
min_value = -60.0
max_value = 0.0

[node name="HBoxContainer3" type="HBoxContainer" parent="Options/VBoxContainer"]
margin_top = 230.0
margin_right = 580.0
margin_bottom = 250.0

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer3"]
margin_right = 144.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Master Volume"

[node name="Master" type="HSlider" parent="Options/VBoxContainer/HBoxContainer3"]
margin_left = 148.0
margin_right = 580.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
min_value = -60.0
max_value = 0.0

[connection signal="toggled" from="Options/VBoxContainer/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="toggled" from="Options/VBoxContainer/Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="toggled" from="Options/VBoxContainer/VSync" to="." method="_on_VSync_toggled"]
[connection signal="value_changed" from="Options/VBoxContainer/HBoxContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer/HBoxContainer2/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer/HBoxContainer3/Master" to="." method="_on_Master_value_changed"]
